Expanded Cheat Menu:
There were still some shortcut keys I needed to remove (actions that are changed).
Maybe slightly faster finding for find within.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000473,Reload Shortcuts,
+302535920000473,Reload ECM Menu,
 302535920000474,Fiddling around in the editor mod can break the menu / shortcuts added by ECM (use this to fix).,
 302535920001308,,
 302535920001309,,
