Expanded Cheat Menu:
Changed:
Added .. to any menu items that are "folders".

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,7 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
 302535920000473,Reload ECM Menu,
 302535920000474,Fiddling around in the editor mod can break the menu / shortcuts added by ECM (use this to fix).,
-302535920001308,,
 302535920001309,,
 302535920001310,,
 302535920001311,,
@@ -216,6 +215,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001308,Settings,
 302535920000734,Clear Log,
 302535920001026,Show File Log,
 302535920001091,Flushes log to disk and displays in console log.,
@@ -224,13 +224,13 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000563,Copy Log Text,
 302535920001120,Console Log Window,
 302535920001073,Console,
-302535920001080,Console History Items,
-302535920001089,Settings & Commands,
+302535920001080,Console history items (mouse-over to see code).,
+302535920001089,Settings & Commands for the console.,
 302535920001112,Console Log,
 302535920001119,Toggle showing the console log on screen.,
 302535920001133,Toggle showing the console log window on screen.,
 302535920001138,Execute this command in the console.,
-302535920001159,Any .lua files contained in %s.,
+302535920001159,Any .lua files in %s.,
 302535920000071,Show Mods Log,
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
