Expanded Cheat Menu:
Added:
ECM will now always show a msg in the log telling user how to turn off the log.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000473,Reload ECM Menu,
-302535920000474,Fiddling around in the editor mod can break the menu / shortcuts added by ECM (use this to fix).,
-302535920001309,,
 302535920001310,,
 302535920001311,,
 302535920001312,,
@@ -99,8 +96,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000471,Object Manipulator,
 302535920000004,Dump,
 302535920000201,Active,
-302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
-Press ~ or Enter and click the ""Console"" button to toggle showing console log history.",
+302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.",
 302535920000013,This shouldn't happen... Well shit something's bork bork bork.,
 302535920000002,Dumped: %s,
 302535920000003,Can't dump nothing,
@@ -153,6 +149,7 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
+302535920001309,"Press Tilde or Enter and click the ""Settings"" button to stop showing console log.",
 302535920000247,Startup ticks,
 302535920000729,You've started a mystery!,
 302535920000730,You've chosen a mystery!,
@@ -215,6 +212,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920000473,Reload ECM Menu,
+302535920000474,Fiddling around in the editor mod can break the menu / shortcuts added by ECM (use this to fix).,
 302535920001308,Settings,
 302535920000734,Clear Log,
 302535920001026,Show File Log,
