Expanded Cheat Menu:
Slowly working towards not needed blacklist.

Fixed:
Menu>ECM>Capacity was showing the waste capacity list rather than a menu popup.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1550,4 +1550,4 @@ restart to set disabled.",
 302535920010005,arg#2 - arg#1 == less than zero,
 302535920010006,Testing math: Start,
 302535920010007,Testing math: End,
-302535920010008,Testing math: Error file: (%s) line number: (%s) val1: (%s) val2: (%s) func: (math.%s
+302535920010008,Testing math: Error file: (%s) line number: (%s) val1: (%s) val2: (%s) func: (math.%s),
