Expanded Cheat Menu:
Sorted Cheats menu to look like Curo menu.
Cleaning up change log

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -481,7 +481,7 @@ Use with Remove Building Limits to fill up a dome with spires.",
 302535920000326,This menu will stay where you drag it.,
 302535920000327,Map Exploration,
 302535920000328,"Scanning, deep scanning, core mines, and alien imprints.",
-302535920000330,Advance to next part or remove mysteries.,
+302535920000330,"Advance to next part, show what part you're on, or remove mysteries.",
 302535920000331,Start Mystery,
 302535920000332,Pick and start a mystery (with instant start option).,
 302535920000334,Show the disasters list and optionally start one.,
