Expanded Cheat Menu:
#### Changed:
- moved Annoying Sounds from Menu>ECM>Misc to Menu>Game.
- It seems the devs didn't remove all traces of the old select sound for the precious metals extractor.
- > It was spamming the console with invalid sound type... (thanks hchsiao)

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000222,,
-302535920001310,,
+302535920000222,Precious Metals Extractor Invalid,
+302535920001310,Clicking on an extractor on a new game with ECM will show an invalid sound type msg in the console log.,
 302535920001311,,
 302535920001312,,
 302535920001313,,
