Expanded Cheat Menu:
Last update before helpermod remove.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,16 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000222,Precious Metals Extractor Invalid,
-302535920001310,Clicking on an extractor on a new game with ECM will show an invalid sound type msg in the console log.,
+302535920000222,,
+302535920000242,,
+302535920000243,,
+302535920000244,,
+302535920001285,,
+302535920001286,,
+302535920001287,,
+302535920001288,,
+302535920001289,,
+302535920001291,,
+302535920001290,,
+302535920001310,,
 302535920001311,,
 302535920001312,,
 302535920001313,,
@@ -47,7 +57,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920001302,Find,
 302535920001303,Search for text within %s.,
 302535920000306,Everything,
-302535920000242,Modify ECM Files,
 302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920000855,Last chance before deletion!,
 302535920000800,MaleOrFemale,
@@ -121,12 +130,6 @@ If you can delete it and still get this error; please send it and this log to th
 302535920000011,Missing Description,
 302535920001297,Toggle Flight Grid,
 302535920001298,Shows a square grid with terrain/objects shape.,
-302535920001291,Cancel: Use Files.hpk after you restart.,
-302535920001290,OK: Overwrite old files!,
-302535920001289,"ECM was updated and you are using the older files in ""%s"".
-Press OK to update files (backup your changed files first).
-
-ECM is stuck on the older files till you restart.",
 302535920001267,%s at position: %s was stopped.,
 302535920000967,Nothing selected.,
 302535920000968,Collisions,
@@ -236,8 +239,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
-302535920000970,Toggle Object Flash,
-302535920000972,Flashes object being examined.,
+302535920000970,UI Flash,
+302535920000972,"Toggle flashing the UI object being examined.
+This may temporarily add some extra values to objects (BorderWidth/BorderColor).",
 302535920001057,Data,
 302535920001257,Auto-refresh list every second.,
 302535920001239,Functions,
@@ -1320,15 +1324,6 @@ Not noticeable unless using higher zoom.",
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
 302535920000051,Mod will not be packed in an hpk file like the Mod Editor does for uploading.,
-302535920000243,"Extracts Files.hpk to ""%s"".
-You can then edit the files for use with ECM, or your mod (don't forget to include my LICENSE file).",
-302535920000244,Extract,
-302535920001285,Clean up,
-302535920001286,"Extract will make ECM use lua files in ""%s"" instead of Files.hpk.
-ECM files contained within will be overwritten (easier for me when there's an update).",
-302535920001287,"Clean up will remove ""%sTheIncal.tga"", and ECM will go back to using Files.hpk.",
-302535920001288,"Restart ECM for any changes to take effect.
-When ECM version is changed ""Clean up"" will occur.",
 302535920001281,Information about your computer (as seen by SM).,
 302535920001282,Information about this saved game (mostly objects).,
 302535920000892,Screenshot,
