--- a/Mods ChoGGi/Borked Transport Stutter/changes.txt
+++ b/Mods ChoGGi/Borked Transport Stutter/changes.txt
@@ -1,2 +1,5 @@
+v0.3
+Da Vinci
+Error that stopped the popup telling you about a borked path.
 v0.2
 Changed it from checking each RC once an hour (in-game) to checking when during load/unload of resources.
