--- a/Mods ChoGGi/Bouncy Drones/changes.txt
+++ b/Mods ChoGGi/Bouncy Drones/changes.txt
@@ -1,3 +1,5 @@
-Version 0.2
+v0.3
+Da Vinci
+v0.2
 Added support for ModConfig mod (change the gravity amount). 
 Added options for Colonists and Rovers.
