--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000244,,
 302535920001285,,
 302535920001286,,
 302535920001287,,
@@ -104,7 +103,8 @@ ID,Text,Translation,Old Translation,Gender
 302535920000471,Object Manipulator,
 302535920000004,Dump,
 302535920000201,Active,
-302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.",
+302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
+If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings"".",
 302535920000013,This shouldn't happen... Well shit something's bork bork bork.,
 302535920000002,Dumped: %s,
 302535920000003,Can't dump nothing,
@@ -1322,6 +1322,7 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000244,Warning! This will hide everything. Remember the shortcut or have fun restarting.,
 302535920000051,Mod will not be packed in an hpk file like the Mod Editor does for uploading.,
 302535920001281,Information about your computer (as seen by SM).,
 302535920001282,Information about this saved game (mostly objects).,
@@ -1365,7 +1366,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001019,This will hide the Cheats menu; Use F2 to see it again (Ctrl-F2 to toggle the Cheats selection panel).,
 302535920001020,Read me,
 302535920001023,This WILL take awhile if you open it in View Text.,
-302535920001029,Change log,
+302535920001029,Changelog,
 302535920001028,"Have a Tutorial, or general info you'd like to add?",
 302535920000657,Screenshot,
 302535920000658,Write screenshot,
