Expanded Cheat Menu: Changed Help>Text to url links
Tutorials:
Updated some.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001285,,
+302535920001285,Opens in webbrowser.,
 302535920001286,,
 302535920001287,,
 302535920001288,,
