Expanded Cheat Menu:
### Added:
- Cheats>Anomaly Scanning (requested by Antipatiko).
- Console>Examine (I used to create a folder with some commonly examined objects, now it's a list saved in settings, thanks blacklist).
- Console>Settings>Exec Code: The devs decided to add some brittleness when pasting text (-- for one).
- > You can use this for pasting chunks of code without worry (might also be easier to work on stuff).
- Wrap Lines checkbox to my text edit dialogs (read globally).

### Changed:
- Manage Mysteries renamed to Mystery Log.
- Examine will now open even if the object is nil/false.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,8 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001286,,
-302535920001287,,
-302535920001288,,
-302535920001289,,
 302535920001291,,
 302535920001290,,
 302535920001310,,
@@ -49,6 +45,11 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001288,Wrap Lines,
+302535920001289,Wrap lines or show horizontal scrollbar.,
+302535920000069,Examine,
+302535920000491,Examine Object,
+302535920001073,Console,
 302535920000242,Blocked by SM function blacklist; use ECM HelperMod to bypass or tell the devs that ECM is awesome and it should have Über access.,
 302535920001302,Find,
 302535920001303,Search for text within %s.,
@@ -214,6 +215,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001287,Instead of a single line, you can enter/execute code in a textbox.,
 302535920000473,Reload ECM Menu,
 302535920000474,Fiddling around in the editor mod can break the menu / shortcuts added by ECM (use this to fix).,
 302535920001308,Settings,
@@ -224,7 +226,6 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001154,Displays the log text in a window you can copy sections from.,
 302535920000563,Copy Log Text,
 302535920001120,Console Log Window,
-302535920001073,Console,
 302535920001080,Console history items (mouse-over to see code).,
 302535920001089,Settings & Commands for the console.,
 302535920001112,Console Log,
@@ -252,7 +253,6 @@ This may temporarily add some extra values to objects (BorderWidth/BorderColor).
 302535920000323,Exec Code,
 302535920000239,Tools,
 302535920000228,Assign to,
-302535920000069,Examine,
 302535920000043,"Scrolls to text entered (press Enter to scroll between found text, Up arrow to scroll to top).",
 302535920000044,Go To Text,
 302535920000045,"Scrolls down one line or scrolls between text in ""Go to text"".
@@ -287,7 +287,7 @@ Which you can then mess around with some more in the console.",
 
 Press %s to hide markers.",
 302535920000040,Exec Code,
-302535920000072,"Paste or type code to be executed here, ChoGGi.CurObj is the examined object.
+302535920000072,"Paste or type code to be executed here, ChoGGi.CurObj is the examined object (ignored when opened from Console).
 Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000073,Exec code (Ctrl-Enter or Shift-Enter to execute code).,
 302535920000075,Insert Obj,
@@ -466,6 +466,8 @@ Use with Remove Building Limits to fill up a dome with spires.",
 302535920000229,Buildings are built instantly.,
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).",
+302535920000329,Scan all anomalies.,
+302535920001286,Scan all or certain types of anomalies.,
 302535920000123,Stops most disasters,
 302535920000251,Metatron Ion Storm,
 302535920001278,Instant Research,
@@ -474,7 +476,6 @@ Use with Remove Building Limits to fill up a dome with spires.",
 302535920000266,Spawn,
 302535920000295,Add Research Points,
 302535920000232,Draggable Cheats Menu,
-302535920000329,Manage Mysteries,
 302535920000321,Toggle Width Of Cheats Menu On Hover,
 302535920000322,Makes the cheats menu just show Cheats till mouseover (restart to take effect).,
 302535920000324,Cheats menu can be moved (restart to toggle).,
@@ -910,7 +911,6 @@ It's not as if domes need to be where you placed them (people will just ignore i
 302535920000490,"Deletes selected object or object under mouse cursor (most objs, not all).
 
 Use Editor Mode and mouse drag to select multiple objects for deletion.",
-302535920000491,Examine Object,
 302535920000492,Opens the object examiner for the selected or moused-over obj.,
 302535920000493,Change Map,
 302535920000494,"Change map (options to pick commander, sponsor, etc...
