Expanded Cheat Menu:
### Changed:
- Mod Upload now has support for packed mods (you need to manually pack them: ModFolder/Pack/ModContent.hpk).
- > If they force only .hpk mods then I'll make it automagical.

Replace Cursors:
New default cursors, thanks to Vavooon

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1323,7 +1323,7 @@ Not noticeable unless using higher zoom.",
 302535920000656,Toggle between moving camera and selecting objects.,
 302535920001285,Opens in webbrowser.,
 302535920000244,Warning! This will hide everything. Remember the shortcut or have fun restarting.,
-302535920000051,Mod will not be packed in an hpk file like the Mod Editor does for uploading.,
+302535920000051,Mod will not be packed in an hpk file like the Mod Editor does for uploading (but you can pack it manually: ModFolder/Pack/ModContent.hpk).,
 302535920001281,Information about your computer (as seen by SM).,
 302535920001282,Information about this saved game (mostly objects).,
 302535920000892,Screenshot,
