Every Flag On Wikipedia:
+v0.3
+List of all names is now applied to built-in countries.
+Now with 10% more randomness (or something like that).
+Also now packed in an .hpk for size (5MB -> under 1MB).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/EveryFlagOnWikipedia/changes.txt
+++ b/Mods ChoGGi/EveryFlagOnWikipedia/changes.txt
@@ -1,2 +1,6 @@
+v0.3
+List of all names is now applied to built-in countries.
+Now with 10% more randomness (or something like that).
+Also now packed in an .hpk for size (5MB -> under 1MB).
 v0.2
 Da Vinci
