Expanded Cheat Menu:
### Changed:
- Cheats>Research>Add Points: Added option to reset sponsor points to zero.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000292,,
+302535920000292,Resets sponsor points to 0,
 302535920001291,,
 302535920001290,,
 302535920001317,,
