--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,8 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001317,,
-302535920001318,,
-302535920001319,,
-302535920001320,,
 302535920001321,,
 302535920001322,,
 302535920001323,,
@@ -927,8 +923,12 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920000502,Shows a hex grid with green for walkable terrain.,
 302535920000503,Toggle Hex Build Grid Visibility,
 302535920000504,Shows a hex grid with green for buildable (ignores uneven terrain).,
+302535920001317,Launch Fuel Per Rocket,
+302535920001318,Change how much fuel rockets need to launch.,
+302535920001319,Rockets Ignore Fuel,
+302535920001320,Rockets don't need fuel to launch.,
 302535920001291,Max Export Amount,
-302535920001290,Change how many rares per rocket can you store.,
+302535920001290,Change how many rares per rocket you can export.,
 302535920000535,Set ShuttleHub Shuttle Capacity,
 302535920000509,Drone Rock To Concrete Speed,
 302535920000511,Drone Move Speed,
