Expanded Cheat Menu:
### Added:
- Examine>Tools>UI Click To Select: Allows you to inspect UI controls by clicking them.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001321,,
-302535920001322,,
 302535920001323,,
 302535920001324,,
 302535920001325,,
@@ -226,6 +224,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920001321,UI Click To Select,
+302535920001322,"Allows you to inspect UI controls by clicking them.
+This dialog will freeze till you click something.",
 302535920000970,UI Flash,
 302535920000972,"Toggle flashing the UI object being examined.
 This may temporarily add some extra values to objects (BorderWidth/BorderColor).",
