Expanded Cheat Menu: ### Changed: - Change Colour (F6) has more attachments listed (the ones GetAttaches doesn't get...).
Spice Harvester:
v0.3
Da Vinci...
No more thumping when the game is paused.
Sounds actually happen when you destroy it.
Pin icon changed to build icon instead of attack rover.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Spice Harvester/changes.txt
+++ b/Mods ChoGGi/Spice Harvester/changes.txt
@@ -1,2 +1,7 @@
+v0.3
+Da Vinci...
+No more thumping when the game is paused.
+Sounds actually happen when you destroy it.
+Pin icon changed to build icon instead of attack rover.
 v0.2
 thumping and dust.
