Expanded Cheat Menu:
### Added:
- Help>List All Menu Items: Show all the cheat menu items in a list dialog.

### Changed:
- Resources: Add Prefabs renamed to Prefab Buildings, and Add Funding to Funding.
- Tweaked dialogs a bit (hover colours, list item tooltip look, spacing, Enter/Esc work in lists).
- Find Value has a Case-sensitive checkbox now.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,10 +1,8 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000501,,
-302535920000502,,
-302535920000503,,
-302535920000504,,
-302535920001323,,
-302535920001324,,
+302535920000723,,
+302535920000724,,
+302535920000725,,
+302535920001192,,
 302535920001325,,
 302535920001326,,
 302535920001327,,
@@ -142,6 +140,7 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
+302535920000503,Right-click an item/submenu to add/remove it from the quickbar.,
 302535920001309,"Press Tilde or Enter and click the ""Settings"" button to stop showing console log.",
 302535920000247,Startup ticks,
 302535920000729,You've started a mystery!,
@@ -198,6 +197,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001233,Launches rocket without asking.,
 302535920001234,Double the amount this %s can hold.,
 302535920001236,Double amount of reneagades this station can negate (currently: %s) < Reselect to update amount.,
+302535920000501,Case-sensitive,
+302535920000502,Treat uppercase and lowercase as distinct.,
 302535920001307,L%s,
 302535920001305,Find Within,
 302535920001306,Enter text to find,
@@ -207,7 +208,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000827,Check this to overwrite file instead of appending to it.,
 302535920001287,Instead of a single line, you can enter/execute code in a textbox.,
 302535920000473,Reload ECM Menu,
-302535920000474,Fiddling around in the editor mod can break the menu / shortcuts added by ECM (use this to fix).,
+302535920000474,Fiddling around in the editor mode can break the menu / shortcuts added by ECM (use this to fix).,
 302535920001308,Settings,
 302535920000734,Clear Log,
 302535920001026,Show File Log,
@@ -281,9 +282,10 @@ Press %s to hide markers.",
 302535920000040,Exec Code,
 302535920000072,"Paste or type code to be executed here, ChoGGi.CurObj is the examined object (ignored when opened from Console).
 Press Ctrl-Enter or Shift-Enter to execute code.",
-302535920000073,Exec code (Ctrl-Enter or Shift-Enter to execute code).,
+302535920000073,Execute code in text box (Ctrl-Enter or Shift-Enter will also work).,
 302535920000075,Insert Obj,
 302535920000076,At caret position inserts: ChoGGi.CurObj,
+302535920001324,ECM: OpenInListChoice(list) is blank... This shouldn't happen.,
 302535920000068,Filter Text,
 302535920000806,"Only show items containing this text.
 
@@ -303,7 +305,7 @@ Warning: Entering the wrong value may crash the game or otherwise cause issues."
 302535920000091,Auto-refresh list every second (turn off to edit values).,
 302535920000092,Refresh list.,
 302535920000093,Go to Obj,
-302535920000094,View object on map.,
+302535920000094,View/select object on map.,
 302535920000095,New Entry,
 302535920000096,Enter the name of the new entry to be added.,
 302535920000097,New Value,
@@ -1028,14 +1030,11 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920000126,Locked From Resupply View,
 302535920000567,Worker Capacity,
 302535920001272,Updated,
-302535920000723,Add Prefabs,
-302535920000725,Add Funding,
 302535920000565,Storage Mechanized Depots Temp,
 302535920000850,Change Resupply Settings,
 302535920000719,Add Orbital Probes,
 302535920000720,Add more probes.,
 302535920000722,Change the amount of Food supplied with each Colonist arrival.,
-302535920000724,Adds prefabs.,
 302535920000726,Add more funding (or reset back to 500 M).,
 302535920000727,Fill Selected Resource,
 302535920000728,Fill the selected/moused over object's resource(s),
@@ -1044,7 +1043,7 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920001189,Passengers,
 302535920001190,Set Food Per Rocket Passenger,
 302535920001194,Use edit box to enter amount of prefabs to add.,
-302535920001195,(Reset to 500 M),
+302535920001195,Reset to 500 M,
 302535920001196,"If your funds are a negative value, then you added too much.
 Fix with: %s",
 302535920001198,Resource Filled,
@@ -1053,7 +1052,6 @@ Fix with: %s",
 302535920001271,Price Per Item,
 302535920001121,Edit value for each setting you wish to change then press OK to save.,
 302535920001191,%s %s prefabs have been added.,
-302535920001192,Prefabs,
 302535920000936,Something you'd like to see added?,
 302535920000937,Laggy with lots of colonists.,
 302535920000940,Select something to monitor.,
@@ -1322,6 +1320,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000504,List All Menu Items,
+302535920001323,Show all the cheat menu items in a list dialog.,
 302535920001285,Opens in webbrowser.,
 302535920000244,Warning! This will hide everything. Remember the shortcut or have fun restarting.,
 302535920000051,Mod will not be packed in an hpk file like the Mod Editor does for uploading (but you can pack it manually: ModFolder/Pack/ModContent.hpk).,
