Expanded Cheat Menu:
Switched from ForEach to MapForEach.

### Changed:
- Hints now show up for cheats toolbar items.
- Find Nearest Resource adds a blinky for ten seconds (it also doesn't select anymore).

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,13 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000723,,
-302535920000724,,
-302535920000725,,
-302535920001192,,
-302535920001325,,
-302535920001326,,
-302535920001327,,
-302535920001328,,
-302535920001329,,
+302535920000063,,
 302535920001330,,
 302535920001331,,
 302535920001332,,
@@ -32,6 +24,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000723,Lua,
 302535920001257,Auto-refresh list every second.,
 302535920001288,Wrap Lines,
 302535920001289,Wrap lines or show horizontal scrollbar.,
@@ -62,7 +55,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920000038,Pick a checkbox next time...,
 302535920000039,Don't pick both checkboxes next time...,
 302535920000042,City,
-302535920000063,unknown name,
 302535920000074,Cancel without changing anything.,
 302535920000084,Auto-Refresh,
 302535920000090,Error opening: %s,
@@ -820,6 +812,14 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920000724,Show Grid Square,
+302535920000725,Square (use Disable to hide.,
+302535920001192,Show Grid 45 Square,
+302535920001325,Square 45 (use Disable to hide).,
+302535920001326,Show Grid Hex,
+302535920001327,Hex (use Disable to hide).,
+302535920001328,Show Grid Disable,
+302535920001329,Hide the white ground grids.,
 302535920001310,DTM Slots Display,
 302535920001311,Toggle DTM slots display,
 302535920001312,FPS Counter Location,
